[package]
name              = "hyper-multipart-rfc7578"
description       = "An implementation of multipart/form-data (RFC7578) for Hyper"
authors           = ["Ferris Tseng <ferristseng@fastmail.fm>"]
documentation     = "https://docs.rs/hyper-multipart-rfc7578"
repository        = "https://github.com/ferristseng/rust-hyper-multipart-rfc7578"
keywords          = ["hyper", "multipart", "form", "http"]
categories        = ["asynchronous", "web-programming"]
version           = "0.2.0-alpha1"
readme            = "README.md"
license           = "MIT OR Apache-2.0"

[badges]
travis-ci         = { repository = "ferristseng/rust-hyper-multipart-rfc7578" }

[dependencies]
bytes             = "1.6"
futures           = "0.3"
http              = "1.1"
http-body = "1.0.1"
http-body-util = "0.1.2"
hyper             = "1.3"
mime              = "0.3"
rand              = "0.8"

[dev-dependencies]
bytes = "1.6"
http-body = "1.0.1"
http-body-util = "0.1.2"
hyper = { version = "1.3", features = ["server"] }
hyper-tls         = "0.6"
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
tokio = { version = "1", features = ["macros", "net", "rt", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
tower = "0.5"
